--- a/main.css
+++ b/main.css
@@ -240,7 +240,7 @@ html,
 body {
 	background-color: #f7f7f7;
 	color: #333;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Oswald', sans-serif;
 	font-size: 16px;
 	margin: 0;
 	padding: 0;
@@ -317,7 +317,7 @@ h2:before {
 
 /* Add a more stylish font to tertiary headings */
 h3 {
-	font-family: 'Playfair Display', serif;
+	font-family: 'Oswald', serif;
 	font-size: 1.8rem;
 	font-weight: 600;
 	margin-bottom: 1.5rem;
